# BarebonesFilesystem

./: .gitignore  CMakeLists.txt  FilesystemTest.sln  LICENSE  README.md
FilesystemTest/: FilesystemImplementation.cpp  FilesystemImplementation.h  FilesystemTest.cpp  FilesystemTest.vcxproj  FilesystemTest.vcxproj.filters
FilesystemTest/FsLib/: Filesystem.cpp  Filesystem.h  FsArray.cpp  FsArray.h  FsArrayAllocators.h  FsBitStream.h  FsCheck.cpp  FsFormat.cpp  FsFormat.h  FsFunction.h  FsLogger.cpp  FsLogger.h  FsMemory.cpp  FsMemory.h  FsNew.h  FsStrUtil.h  FsString.h  FsTests.h
FsLib/: FsCheck.cpp  FsCheck.h  FsLogger.h  FsTests.cpp
FsLib/include/: Filesystem.h  FsArray.h  FsBitStream.h  FsStrUtil.h  FsTypeTraits.h  FsTypes.h
FsLib/source/: Filesystem.cpp
WindowsImpl/: FilesystemImplementation.h  FilesystemTest.cpp
cmake/: check_builtin.c  config.h.in  fetch_dokan.cmake  find_dokan.cmake
